force-app/main/default/objects/DIR_Employee__c/fields/Authority_Designee_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Authority_Designee_Start_Date__c</fullName>
    <description>Start date when Authority Designee should be assigned to permission set</description>
    <label>Authority Designee Start Date</label>
    <type>Date</type>
</CustomField>