force-app/main/default/objects/DIR_Employee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Employee's email address</description>
    <inlineHelpText>Email address for Salesforce users will be set automatically.
If the employee is NOT a Salesforce user, please enter their email address here.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>