force-app/main/default/objects/DIR_Employee__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <formula>IF ( AND ( ISPICKVAL (Position__c, "DEPUTY"), ISPICKVAL (Title__c ,"Deputy Labor Commissioner") ), IF( TODAY () - Start_of_employment__c &gt; 365 , 100000, 75000) , ( IF ( AND ( ISPICKVAL (Position__c, "DEPUTY"), ISPICKVAL (Title__c ,"Industrial Relations Representative") ), IF ( TODAY () - Start_of_employment__c &gt; 365, 75000, 50000), ( IF ( AND ( ISPICKVAL (Position__c, "DEPUTY"), ISPICKVAL (Title__c ,"Management Services Technician") ), IF( TODAY () - Start_of_employment__c &gt; 365, 75000, 50000),null)))))</formula>
    <label>Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>