force-app/main/default/objects/DIR_Employee__c/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <description>Defines where data was imported from, part of data migration</description>
    <label>Imported From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOFE A/R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>