force-app/main/default/objects/DIR_Employee__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The office the user is associated to. Related fields are used on output documents</description>
    <inlineHelpText>The office to which the employee is associated.</inlineHelpText>
    <label>Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Internal Employees</relationshipLabel>
    <relationshipName>Internal_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>