force-app/main/default/objects/DIR_Employee__c/fields/Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Office_Name__c</fullName>
    <formula>If(Office__r.Name = 'Judgment Enforcement Unit' || CONTAINS(Office__r.Name, 'BOFE'), 'Statewide BOFE', Office__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Name</label>
    <type>Text</type>
</CustomField>