force-app/main/default/objects/DIR_Employee__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Position the employee holds</description>
    <inlineHelpText>Select the position the employee holds</inlineHelpText>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Senior Deputy</fullName>
            </value>
            <value>
                <fullName>Deputy</fullName>
            </value>
            <value>
                <fullName>Clerk</fullName>
            </value>
            <value>
                <fullName>Hearing Officer</fullName>
            </value>
            <value>
                <fullName>Cashiering</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
            <value>
                <fullName>CIU</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Registration_Services</fullName>
                <label>Registration Services</label>
            </value>
            <value>
                <fullName>Public Information Investigator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>