force-app/main/default/objects/DIR_Employee__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deputy Labor Commissioner</fullName>
            </value>
            <value>
                <fullName>Deputy Labor Commissioner II</fullName>
            </value>
            <value>
                <fullName>Deputy Labor Commissioner III</fullName>
            </value>
            <value>
                <fullName>Industrial Relations Representative</fullName>
            </value>
            <value>
                <fullName>Management Services Technician</fullName>
            </value>
            <value>
                <fullName>Office Assistant</fullName>
            </value>
            <value>
                <fullName>Office Technician</fullName>
            </value>
            <value>
                <fullName>Payroll Auditor</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
            <value>
                <fullName>Senior Deputy Labor Commissioner</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Hearing Officer</fullName>
            </value>
            <value>
                <fullName>Staff Service Analyst</fullName>
            </value>
            <value>
                <fullName>Assistant Chief</fullName>
            </value>
            <value>
                <fullName>Registration Approver</fullName>
            </value>
            <value>
                <fullName>Labor Compliance Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>