force-app/main/default/objects/DIR_Employee__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related user record for the employee. Some employees may not be salesforce users, but when they are, certain automations and activities will use the related user record.</description>
    <inlineHelpText>If the employee is a salesforce user, select the user. If the employee is not a salesforce user, you may leave this field blank.</inlineHelpText>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DIR_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>