force-app/main/default/objects/DIR_Employee__c/recordTypes/DLSE_Employees.recordType-meta.xml
<RecordType>
    <fullName>DLSE_Employees</fullName>
    <active>true</active>
    <description>DLSE Employees Record Type</description>
    <label>DLSE Employees</label>
</RecordType>