force-app/main/default/objects/DIR_Employee__c/validationRules/BOFE_Deputy_Require_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>BOFE_Deputy_Require_Manager</fullName>
    <active>true</active>
    <description>For a BOFE deputy, require a manager be set</description>
    <errorConditionFormula>RecordType.DeveloperName = 'BOFE_Employees'
&amp;&amp;
 Active__c 
&amp;&amp;
 ISPICKVAL ( Position__c , 'Deputy' )
&amp;&amp; 
 ISBLANK ( Manager__c )</errorConditionFormula>
    <errorMessage>When assigning a deputy, please assign a manger in order to save the record.</errorMessage>
</ValidationRule>