force-app/main/default/objects/DIR_Employee__c/validationRules/Prevent_changing_of_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_changing_of_Name</fullName>
    <active>true</active>
    <description>Prevents the employee name from being changed.</description>
    <errorConditionFormula>ISCHANGED (  Name  ) 
&amp;&amp;  NOT( CONTAINS($Profile.Name, 'System Administrator') )</errorConditionFormula>
    <errorMessage>You may not change the Name on an employee record. Please create a new employee record.</errorMessage>
</ValidationRule>