force-app/main/default/objects/DIR_Employee__c/validationRules/Prevent_changing_of_User_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_changing_of_User_record</fullName>
    <active>true</active>
    <description>Prevents users from modifying Employee record.</description>
    <errorConditionFormula>AND 
(PRIORVALUE(RecordTypeId) = '012d00000019POZ', 
NOT( CONTAINS($Profile.Name, 'System Administrator') ))</errorConditionFormula>
    <errorMessage>Generate a Service Request to modify this employee record.</errorMessage>
</ValidationRule>