force-app/main/default/objects/DIR_Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Manager__c</columns>
    <columns>Office__c</columns>
    <columns>Position__c</columns>
    <columns>Title__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>