force-app/main/default/objects/DIR_Employee__c/listViews/Imported.listView-meta.xml
<ListView>
    <fullName>Imported</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Position__c</columns>
    <columns>Manager__c</columns>
    <columns>Office__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Active__c</columns>
    <columns>Phone__c</columns>
    <columns>Imported_From__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Imported_From__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Imported</label>
    <sharedTo>
        <group>BOFE_Admin</group>
    </sharedTo>
</ListView>