force-app/main/default/objects/DIR_Employee__c/listViews/RCI_Employees.listView-meta.xml
<ListView>
    <fullName>RCI_Employees</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email__c</field>
        <operation>contains</operation>
        <value>rci,vertiba</value>
    </filters>
    <label>RCI Employees</label>
</ListView>