force-app/main/default/objects/DIR_Employee__c/listViews/RS.listView-meta.xml
<ListView>
    <fullName>RS</fullName>
    <columns>NAME</columns>
    <columns>Office__c</columns>
    <columns>Manager__c</columns>
    <columns>User__c</columns>
    <columns>Email__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Registration_Services</value>
    </filters>
    <label>RS</label>
</ListView>